--- a/src/infer_basic/requirements.txt
+++ b/src/infer_basic/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.2.3
 spacy==3.5.1
 transformers[torch]==4.26.1
-# uwsgi==2.0.21 # only works with python 3.9
-# prometheus-client==0.16.0
+uwsgi==2.0.21 # only works with python 3.9
+prometheus-client==0.16.0
