--- a/k8s/scaling.yaml
+++ b/k8s/scaling.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: myapp-hpa
+  name: question-answering-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: myapp-deployment
-  minReplicas: 2   # Set the minimum number of replicas
-  maxReplicas: 6   # Set the maximum number of replicas
-  targetCPUUtilizationPercentage: 50   # Set the target CPU utilization percentage
+    name: question-answering
+  minReplicas: 1   # min
+  maxReplicas: 10   # max
+  targetCPUUtilizationPercentage: 70   # Set the target CPU utilization percentage
