--- a/src/onnx_infer/requirements.txt
+++ b/src/onnx_infer/requirements.txt
@@ -1,9 +1,8 @@
-numpy==1.24.2
 Flask==2.2.3
 spacy==3.5.1
 transformers[torch]==4.26.1
 optimum==1.7.1
 onnxruntime==1.14.1
 onnx==1.13.1
-# prometheus-client==0.16.0
-# uwsgi==2.0.21 # only works with python 3.9
+prometheus-client==0.16.0
+uwsgi==2.0.21 # only works with python 3.9
